--- a/videolibrary/src/main/res/layout/jz_layout_std.xml
+++ b/videolibrary/src/main/res/layout/jz_layout_std.xml
@@ -62,6 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="00:00"
+            android:layout_marginRight="14dp"
             android:textColor="#ffffff" />
 
         <TextView
@@ -69,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:paddingLeft="20dp"
+            android:paddingLeft="6dp"
             android:text="clarity"
             android:textAlignment="center"
             android:textColor="#ffffff" />
@@ -159,6 +160,7 @@
                 android:layout_width="23dp"
                 android:layout_height="10dp"
                 android:layout_gravity="center_horizontal"
+                android:visibility="gone"
                 android:background="@drawable/jz_battery_level_10" />
 
             <TextView
