--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <com.example.videolibrary.UUabcVideoView
-            android:id="@+id/videoplayer"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/button2"/>
+            tools:ignore="MissingConstraints">
+
+        <com.example.videolibrary.UUabcVideoView
+                android:id="@+id/videoplayer"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                tools:ignore="MissingConstraints"/>
+    </LinearLayout>
     <Button
             android:text="FullScreen2"
             android:layout_width="wrap_content"
